--- a/starter/tsconfig.json
+++ b/starter/tsconfig.json
@@ -9,6 +9,7 @@
     },
     "files": [
         "./static/js/main.tsx",
+        "./static/js/models.ts",
         "./static/js/components/app.tsx"
     ]
 }
