working ajax and task creation

--- a/starter/tsconfig.json
+++ b/starter/tsconfig.json
@@ -10,6 +10,8 @@
     "files": [
         "./static/js/main.tsx",
         "./static/js/models.ts",
-        "./static/js/components/app.tsx"
+        "./static/js/components/app.tsx",
+        "./static/js/components/create_task.tsx",
+        "./static/js/components/task.tsx"
     ]
 }
