--- a/starter/package.json
+++ b/starter/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/jquery": "^2.0.33",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.18",
     "css-loader": "^0.25.0",
+    "jquery": "^3.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "style-loader": "^0.13.1"
