--- a/starter/package.json
+++ b/starter/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
+    "jquery": "^3.1.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
+  "devDependencies": {
     "@types/jquery": "^2.0.33",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.18",
     "css-loader": "^0.25.0",
-    "jquery": "^3.1.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "style-loader": "^0.13.1"
-  },
-  "devDependencies": {
     "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "ts-loader": "^0.9.1"
   }
 }
