--- a/starter/package.json
+++ b/starter/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "jquery": "^3.1.1",
+    "moment": "^2.17.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
