--- a/starter/package.json
+++ b/starter/package.json
@@ -3,12 +3,14 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "@types/jquery": "^2.0.33",
     "@types/react": "^0.14.41",
     "@types/react-dom": "^0.14.18",
+    "@types/react-router": "^2.0.41",
     "css-loader": "^0.25.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
