--- a/starter/package.json
+++ b/starter/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "jquery": "^3.1.1",
+    "linkify-it": "^2.0.2",
     "moment": "^2.17.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "tlds": "^1.182.0"
   },
   "devDependencies": {
     "@types/jquery": "^2.0.33",
