--- a/starter/package.json
+++ b/starter/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^0.25.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "ts-loader": "^0.9.1"
+    "ts-loader": "^0.9.1",
+    "webpack": "^2.2.1"
   }
 }
