--- a/starter/package.json
+++ b/starter/package.json
@@ -5,6 +5,7 @@
     "moment": "^2.17.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-markdown": "^2.5.0",
     "react-router": "^3.0.0",
     "tlds": "^1.182.0"
   },
