--- a/starter/package.json
+++ b/starter/package.json
@@ -1,26 +1,26 @@
 {
   "dependencies": {
-    "jquery": "^3.1.1",
-    "linkify-it": "^2.0.2",
-    "moment": "^2.17.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-markdown": "dwetterau/react-markdown#dee7c77",
-    "react-router": "^3.0.0",
+    "jquery": "^3.2.1",
+    "linkify-it": "^2.0.3",
+    "moment": "^2.18.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-markdown": "github:dwetterau/react-markdown#dee7c77",
+    "react-router": "^3.2.0",
     "tlds": "^1.182.0"
   },
   "devDependencies": {
-    "@types/jquery": "^2.0.33",
+    "@types/jquery": "^2.0.48",
     "@types/react": "^0.14.57",
     "@types/react-dom": "^0.14.23",
-    "@types/react-router": "^2.0.50",
+    "@types/react-router": "^2.0.51",
     "css-loader": "^0.25.0",
     "file-loader": "^1.1.5",
-    "react-datetime": "^2.10.1",
+    "react-datetime": "^2.10.3",
     "react-textarea-autosize": "^5.1.0",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.9.1",
-    "webpack": "^2.2.1"
+    "source-map-loader": "^0.1.6",
+    "style-loader": "^0.13.2",
+    "ts-loader": "^0.9.5",
+    "webpack": "^2.7.0"
   }
 }
