--- a/starter/package.json
+++ b/starter/package.json
@@ -1,26 +1,25 @@
 {
   "dependencies": {
-    "jquery": "^3.2.1",
+    "@types/jquery": "^3.3.4",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "^4.2.7",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "jquery": "^3.3.1",
     "linkify-it": "^2.0.3",
-    "moment": "^2.18.1",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-markdown": "github:dwetterau/react-markdown#dee7c77",
-    "react-router": "^3.2.0",
-    "tlds": "^1.182.0"
-  },
-  "devDependencies": {
-    "@types/jquery": "^2.0.48",
-    "@types/react": "^0.14.57",
-    "@types/react-dom": "^0.14.23",
-    "@types/react-router": "^2.0.51",
-    "css-loader": "^0.25.0",
-    "file-loader": "^1.1.5",
-    "react-datetime": "^2.10.3",
-    "react-textarea-autosize": "^5.1.0",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^0.9.5",
-    "webpack": "^2.7.0"
+    "moment": "^2.22.2",
+    "react": "^16.4.1",
+    "react-datetime": "^2.14.0",
+    "react-dom": "^16.4.1",
+    "react-markdown": "^3.3.4",
+    "react-router-dom": "^4.3.1",
+    "react-textarea-autosize": "^6.1.0",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
+    "tlds": "^1.203.1",
+    "ts-loader": "^4.4.2",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   }
 }
