--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: node_js
 node_js:
   - "node"
+
+# Just so that we have consistent timezones between development-generated snapshots and CI
+before_script:
+ - echo 'America/Los_Angeles' | sudo tee /etc/timezone
+ - sudo dpkg-reconfigure --frontend noninteractive tzdata
