--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
+    "react-google-charts": "^3.0.14",
     "react-markdown": "^3.6.0",
     "react-router-dom": "^4.3.1",
     "react-textarea-autosize": "^6.1.0",
